--- a/style.css
+++ b/style.css
@@ -126,5 +126,42 @@ transform: rotate(360deg);
     }
 }
 
+a{
+    color: white;
+    text-decoration: none;
+}
 
+.contato-informacoes h2{
+    color: white;
+}
 
+.contato-informacoes span{
+    color: rgb(143, 143,143);
+}
+
+.contato-informacoes{
+   display: flex;
+   flex-wrap: wrap;
+   gap: 24px;
+   justify-content: center;
+   text-align: center;
+   
+}
+
+.contato-redes{
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+
+}
+
+.contato {
+    background-color: #202020;
+    padding: 24px;
+    border-radius: 10px;
+}
+
+iframe{
+    max-width: 100%;
+    border-radius: 12px;
+}
